#716 Addedd language support for the popups and overflow of popup is fix.

--- a/player/public/css/app/style.css
+++ b/player/public/css/app/style.css
@@ -568,6 +568,7 @@ ion-popover-view.fit ion-content {
 
 .popup-body {
     position: relative;
+    overflow: hidden;
     font-family: baloobhai;
     font-size: 2vw;
     margin: 10px;
